Do not issue automatic requeues for long-running tasks